# RecurrentGemma

./: .gitignore  README.md  flake.nix  pyproject.toml  train.sh  train.slurm
.github/workflows/: lint.yml
src/: config.py  model.py  train.py
src/classes/: config.py  dataset.py  pad_collator.py
